--- a/client/reactnative-proto/package.json
+++ b/client/reactnative-proto/package.json
@@ -4,7 +4,8 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
-    "test": "jest"
+    "typecheck": "tsc --noEmit -p .",
+    "test": "yarn typecheck && jest"
   },
   "dependencies": {
     "expo": "~36.0.0",
