--- a/client/reactnative-proto/package.json
+++ b/client/reactnative-proto/package.json
@@ -19,6 +19,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-svg": "^12.0.3",
     "react-native-swiper": "^1.5.14",
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7"
